fix: :bug: fixed overflow problems with custom status

--- a/src/components/user-presence/styles.module.scss
+++ b/src/components/user-presence/styles.module.scss
@@ -3,6 +3,13 @@
   align-items: center;
 }
 
+.value > span {
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .dot {
   height: 10px;
   width: 10px;
@@ -26,6 +33,9 @@
 }
 
 .value {
+  display: flex;
+  overflow: hidden;
+  align-items: center;
   font-size: 12px;
   margin-left: 3px;
   opacity: 0.8;
